<resources>
    <string name="app_name">NotifyMe</string>
    <string name="welcome_text">Welcome back,</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="login_btn_text">Login</string>
    <string name="or_text">OR</string>
    <string name="title_activity_location_based_service">Map</string>
    <string name="alarm_name">Alarm Name</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="Ringtone">Ringtone</string>
    <string name="title_activity_location_based_sms">Map</string>
    <string name="title_activity_road_condition_maps">Map</string>
    <string name="title_activity_track_points_maps">Map</string>
    <string name="title_activity_view_points_maps">Map</string>
</resources>
